fixes spacing for blog roll

--- a/wp-content/themes/irmr/_/components/sass/_base.scss
+++ b/wp-content/themes/irmr/_/components/sass/_base.scss
@@ -970,10 +970,12 @@ img.featuredimg {
 		padding: 40px;
 		border: 5px solid #EEE;
 		margin-bottom: 20px;
+    padding-left: 270px;
+    position: relative;
 		a {
 			font-family: $bodytext;
 			font-size: 23px;
-      display: block;
+      display: inline-block;
 		}
 		
 		a.solidbtn {
@@ -983,6 +985,11 @@ img.featuredimg {
 		img {
 			max-height: 49px;
 		}
+    img.alignleft {
+      position: absolute;
+      left: 40px;
+      top: 40px;
+    }
 		
 		&:last-child {
 			margin-bottom: 0;
